resources/tribe-events-full.css
/* ... */
.tribe-events-calendar div[id*="tribe-events-daynum-"], 
.tribe-events-calendar div[id*="tribe-events-daynum-"] a {
	background-color: #f5f5f5;
	color: #333;
	font-size: 11px;
	font-weight: bold;
}
.tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"], 
.tribe-events-calendar td.tribe-events-present div[id*="tribe-events-daynum-"] > a  {
	background-color: #666;
	color: #fff;
}
.tribe-events-calendar td.tribe-events-past div[id*="tribe-events-daynum-"], 
.tribe-events-calendar td.tribe-events-past div[id*="tribe-events-daynum-"] > a {
	color: #999;
}
#tribe-events-content .tribe-events-calendar td {
	height: 110px;
	width: 14.28%;
	color: #114b7d;
	vertical-align: top;
	padding: 0 0 .5em;
	font-size: 12px;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
}
.vevent.viewmore {
	font-weight:bold;
}

/* Global Tooltips */
.tribe-events-calendar .tribe-events-tooltip,
.tribe-events-week .tribe-events-tooltip, 
.recurring-info-tooltip {
	border: 1px solid #666;
	position: absolute;
	z-index: 1001;
	bottom: 30px;
	left: 3px;
	width: 320px;
	background-color: #f9f9f9;
	color: #333;
	line-height: 1.4;
	display: none;
}
.tribe-events-tooltip .tribe-events-arrow {
	width: 18px;
	height: 11px;
	background-image: url(images/tribe-tooltips.png);
	background-repeat: no-repeat;
	background-position: 0 0;
	-webkit-background-size: 44px 19px;
    		background-size: 44px 19px;
	display: block;
	position: absolute;
	bottom: -11px;
	left: 20px;
}
.tribe-events-calendar .tribe-events-right .tribe-events-tooltip,
.tribe-events-week .tribe-events-right .tribe-events-tooltip,
.recurring-info-tooltip {
	left: auto;
	right: 3px;
}
.tribe-events-right .tribe-events-tooltip .tribe-events-arrow {
	left: auto;
	right: 30px;
}

/* recurring info tooltip */
.recurringinfo {
	display: inline-block;
	vertical-align: middle;
	zoom: 1;
	*display: inline;
	position: relative;
} 
.event-is-recurring {
	position: relative;
	font-style: normal;
	font-weight: 500;
	color: rgba(0, 0, 0, .7);
}

.event-is-recurring:hover {
	color: #000;
}

/*
.event-is-recurring img {
	width: 16px;
	height: 16px;
	opacity: .7;
	display: inline;
	vertical-align: middle;	
	box-shadow: none !important;
}
.event-is-recurring:hover img {
	opacity: 1.0;
}
*/

.recurring-info-tooltip.tribe-events-tooltip {
	left: 10px;
	width: 200px;
	padding-bottom: .8em;
}

/* Large Calendar Specifics */
.events-archive.events-gridview #tribe-events-content table .vevent {
	margin: 0 5%;
	padding: 6px 8px;
	border-bottom: 1px solid #e7e7e7;
}
.events-archive.events-gridview #tribe-events-content table .tribe-events-last {
	border-bottom: 0;
}
.tribe-events-viewmore {
	margin: 0 5%;
	padding: 9px 8px;
	font-weight: bold;
	line-height: 1;
	border-top: 1px solid #e7e7e7;
}
.tribe-events-calendar td .tribe-events-viewmore a{
	font-size: 100%;
}
.tribe-events-calendar th {
	width: 14.28%;
	height: 10px;
	background-color: #ddd;
	color: #333;
	padding: 4px 0;
	text-align: center;
	text-transform: uppercase;
	letter-spacing: 1px;
}
.tribe-events-calendar td div[id*="tribe-events-daynum-"] {
	padding: 6px 9px;
	line-height: 1.2;
}
.tribe-events-calendar td a {font-size: 91.7%;}
.tribe-events-calendar div[id*="tribe-events-event-"],
.tribe-events-calendar div[id*="tribe-events-daynum-"] {
	position: relative;
	margin: 0;
}
#tribe-events-content .tribe-events-calendar div[id*="tribe-events-event-"] h3.tribe-events-month-event-title {
	line-height: 1.25;
	font-size: 13px;
	font-weight: normal;
	font-family: sans-serif;
	font-weight: bold;
	text-transform: none;
	margin: 0;
	padding: 0;
	letter-spacing: 0;
}
.tribe-events-calendar div[id*="tribe-events-event-"] h3.tribe-events-month-event-title a {
	font-size: 100%;
}

/* Large Calendar Tooltip Specifics */
#tribe-events-content .tribe-events-tooltip h4 {
	margin: 0;
	color: #fff;
	background-color: #666;
	font-size: 12px;
	padding: 0 6px;
	min-height: 24px;
	line-height: 24px;
	letter-spacing: 1px;
	font-weight: normal;
}
.tribe-events-tooltip .tribe-events-event-body {
	font-size: 11px;
	padding: 3px 6px 6px;
	font-weight: normal;
}
.tribe-events-tooltip .duration {
	font-style: italic;
	margin: 3px 0;
}
.tribe-events-tooltip .tribe-events-event-thumb {
	float: left;
	padding: 5px 5px 5px 0;
}
.tribe-events-tooltip .tribe-events-event-thumb img {
	-webkit-box-shadow: none;
			box-shadow: none;
}
.tribe-events-tooltip p.entry-summary {
	padding: 0;
	font-size: 11px;
	line-height: 1.5;
}

/* = Events List Widget Styles (Sidebar)
   @ Template: list-widget.php
=============================================*/

.tribe-events-list-widget ol li {
	margin-bottom: 30px;
	list-style: none;
}

.tribe-events-list-widget  .duration {
	font-weight: bold;
}

/* = WooTickets
=============================================*/
table.tribe-events-tickets .tickets_price {
	font-style: italic;
	color: #000;
	font-weight: bold;
}

td.tickets_name {
	color: #777;
	font-size: 13px;
}

.single-tribe_events #tribe-events-content form.cart,
.single-tribe_events #tribe-events-content div.cart {
	background: #fafafa;
	border: 1px solid #eee;
	margin: 30px 0;
	padding: 0 4% 3%;
}

table.tribe-events-tickets {
	margin: 0;
	width: 100%;
	border-bottom: 0;
}

table.tribe-events-tickets td {
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	padding: 8px 10px 8px 0;
	vertical-align: middle;
}

table.tribe-events-tickets td.wpec {
	line-height: 0;
}

table.tribe-events-tickets td.woocommerce {
	border-bottom: 0;
}

table.tribe-events-tickets td.wpec img {
	display: none;
}

table.tribe-events-tickets td fieldset {	
	padding: 14px 0.625em 4px;
	border: 0;
	margin-top: 8px;
}

table.tribe-events-tickets .tickets_nostock {
	display: inline-block;
	text-align: center;
}

h2.tribe-events-tickets-title {
	margin: 20px 0 25px;
	font-size: 1.4em;
	font-weight: bold;
}
/* ... */

